# MarkdownTranslator

./: README.md
project/result/: 测试-列表1.html  测试-列表2.html  测试-图片.html  测试-文本1.html  测试-文本2.html  测试-标题1.html  测试-标题2.html  测试-综合.html  测试-链接.html
project/src/App/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  translator.cpp  translator.h
project/test/: 测试-图片.md  测试-标题1.md  测试-链接.md
